--- a/docs/main.css
+++ b/docs/main.css
@@ -60,7 +60,7 @@ html, body {
 
 .main-header h1 {
     background-color: rgba(0, 0, 0, .3);
-    background-image: url("images/mountain_PNG30.webp");
+    background-image: url("images/mountain_PNG30.png");
     background-size: cover;
     background-blend-mode: multiply;
     font-size: 50px;
