actual actual case fix...

--- a/docs/projects/gaMain.css
+++ b/docs/projects/gaMain.css
@@ -1,7 +1,7 @@
 h1 {
     text-align: center;
     padding: 2%;
-    background:url("../Images/evolution.png");
+    background:url("../images/evolution.png");
     background-repeat: repeat;
     background-repeat: round;
     font-size: 500%;
