--- a/docs/assets/pages/projects/gaMain.css
+++ b/docs/assets/pages/projects/gaMain.css
@@ -1,7 +1,7 @@
 h1 {
     text-align: center;
     padding: 2%;
-    background:url("../images/evolution.png");
+    background:url("../../images/evolution.png");
     background-repeat: repeat;
     background-repeat: round;
     font-size: 500%;
