--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -12,7 +12,7 @@ html, body {
   min-height: 100%;
   display: grid;
   grid-template-rows: 3% auto;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   gap: 1em; }
 
 a {
@@ -24,7 +24,7 @@ a:hover {
 .nav {
   grid-column: 1 / -1;
   display: grid;
-  gap: 2em;
+  /* gap: 1em; */
   grid-template-columns: 1fr auto 1fr; }
   .nav li {
     display: inline; }
