--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -45,7 +45,8 @@ a:hover {
   grid-column: 1 / -1;
   justify-self: center;
   text-align: center;
-  width: 40%;
+  max-width: 1024px;
+  min-width: 720px;
 }
 
 .foot {
