--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -43,6 +43,8 @@ a:hover {
 
 .header {
   grid-column: 1 / -1;
+  padding-left: 2em;
+  padding-right: 2em;
   justify-self: center;
   text-align: center;
   max-width: 1024px;
