--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -71,6 +71,9 @@ a:hover {
   grid-column: 2; }
 
 img.icon {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 6em; }
 
 *.clickable:hover {
