Jonas drone certificate added

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -76,6 +76,9 @@ img.icon {
   margin-right: auto;
   width: 6em; }
 
+img.picture {
+  max-width: 100%; }
+
 *.clickable:hover {
   opacity: 0.7;
   transition: .25s ease; 
